force-app/main/default/objects/refedge__Invitation__c/fields/refedge__Case__c.field-meta.xml
<CustomField>
    <fullName>refedge__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Invitations</relationshipLabel>
    <relationshipName>Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>