force-app/main/default/objects/refedge__Invitation__c/fields/refedge__Invitation_Expiration__c.field-meta.xml
<CustomField>
    <fullName>refedge__Invitation_Expiration__c</fullName>
    <inlineHelpText>The date upon which the Microsite associated with this invitation will no longer be accessible.</inlineHelpText>
    <label>Invitation Expiration</label>
    <type>Date</type>
</CustomField>