force-app/main/default/objects/refedge__Invitation__c/fields/refedge__Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>refedge__Is_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>