force-app/main/default/objects/refedge__Invitation__c/fields/refedge__Lead__c.field-meta.xml
<CustomField>
    <fullName>refedge__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lead associated to this invitation</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Invitations</relationshipLabel>
    <relationshipName>Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>