force-app/main/default/objects/refedge__Invitation__c/fields/refedge__Message__c.field-meta.xml
<CustomField>
    <fullName>refedge__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>