force-app/main/default/objects/refedge__Invitation__c/fields/refedge__Microsite__c.field-meta.xml
<CustomField>
    <fullName>refedge__Microsite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Microsite</label>
    <referenceTo>refedge__Microsite__c</referenceTo>
    <relationshipLabel>Invitations</relationshipLabel>
    <relationshipName>Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>