force-app/main/default/objects/refedge__Invitation__c/fields/refedge__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>refedge__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Invitations</relationshipLabel>
    <relationshipName>Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>